--- a/M2-D3.html
+++ b/M2-D3.html
@@ -10,7 +10,38 @@
     <title>Travel Agency</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+      <!-- Navigatoin -->
+      <header>
+
+      </header>
+      <!-- Jumbotron -->
+
+      <!-- Section > Day of the week -->
+      <section >
+
+      </section>
+
+      <!-- Section > Welcome Summer -->
+      <section>
+
+      </section>
+
+      <!-- Section > Deal of the day -->
+      <section>
+
+      </section>
+
+      <!-- Section > Last Minute-->
+      <section>
+
+      </section>
+
+      <!-- Testimonials -->
+      <section>
+
+      </section>
+
+
 
     
 
