--- a/M2-D3.html
+++ b/M2-D3.html
@@ -12,7 +12,13 @@
   <body>
       <!-- Navigatoin -->
       <header>
-
+        <nav>
+          <ul>
+            <li>helo hello</li>
+            <li></li>
+            <li>jello</li>
+          </ul>
+        </nav>
       </header>
       <!-- Jumbotron -->
 
