--- a/M2-D3.html
+++ b/M2-D3.html
@@ -41,8 +41,8 @@
       </header>
       <!-- Jumbotron -->
       <div class=" w-100 vh-100 d-flex flex-column justify-content-center align-items-center  " style="background-image: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url('https://images.pexels.com/photos/2325446/pexels-photo-2325446.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940'); background-position: center; background-repeat: no-repeat; background-size: cover;">
-        <h1 class="text-light" style="font-family: 'Tangerine', cursive; font-size: 7rem;">Let's Travel Together</h1>
-        <p class="text-light" style="font-family: 'Tangerine', cursive; font-size: 3rem;">Explore the world with us !</p>
+        <h1 class="text-light" >Let's Travel Together</h1>
+        <p class="text-light" >Explore the world with us !</p>
       </div>
       <!-- Section > Day of the week -->
       <section >
