--- a/M2-D3.html
+++ b/M2-D3.html
@@ -60,11 +60,11 @@
         <h1> Welcome Summer</h1>
         <div class="row mt-5">
           <div class="col-sm-6 col-md-6 col-lg-2 border border-dark"> <img src="/images/paris.avif" alt="" srcset="" class="img-fluid"></div>
-          <div class="col-sm-6 col-md-6 col-lg-2 border border-dark"></div>
-          <div class="col-sm-6 col-md-6 col-lg-2 border border-dark"></div>
-          <div class="col-sm-6 col-md-6 col-lg-2 border border-dark"></div>
-          <div class="col-sm-6 col-md-6 col-lg-2 border border-dark"></div>
-          <div class="col-sm-6 col-md-6 col-lg-2 border border-dark"></div>
+          <div class="col-sm-6 col-md-6 col-lg-2 border border-dark"> <img src="https://images.unsplash.com/photo-1598061437788-ebbfc3257ce1?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1932&q=80" alt="" srcset="" class="img-fluid"></div>
+          <div class="col-sm-6 col-md-6 col-lg-2 border border-dark"><img src="https://images.unsplash.com/photo-1619943379511-10dafc6e128c?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTV8fHRyYXZlbCUyMGRlc3RpbmF0aW9uc3xlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="" srcset="" class="img-fluid"></div>
+          <div class="col-sm-6 col-md-6 col-lg-2 border border-dark"><img src="https://images.unsplash.com/photo-1622460432957-949a1a166642?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTd8fHRyYXZlbCUyMGRlc3RpbmF0aW9uc3xlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="" srcset="" class="img-fluid"></div>
+          <div class="col-sm-6 col-md-6 col-lg-2 border border-dark"><img src="https://images.unsplash.com/photo-1601297616279-35a028506c93?ixid=MnwxMjA3fDB8MHxzZWFyY2h8OHx8c29tbWVyfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="" srcset="" class="img-fluid"></div>
+          <div class="col-sm-6 col-md-6 col-lg-2 border border-dark"><img src="https://images.unsplash.com/photo-1600763775060-27a9e38a10c7?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTN8fHNvbW1lcnxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="" srcset="" class="img-fluid"></div>
         </div>
       </div>
 
