--- a/M2-D3.html
+++ b/M2-D3.html
@@ -40,18 +40,80 @@
         
       </header>
       <!-- Jumbotron -->
-      <div class=" w-100 vh-100 d-flex flex-column justify-content-center align-items-center  " style="background-image: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url('https://images.pexels.com/photos/2325446/pexels-photo-2325446.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940'); background-position: center; background-repeat: no-repeat; background-size: cover;">
+      <div class=" w-100 vh-100 d-flex flex-column justify-content-center align-items-center  " style="background-image: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url('https://images.pexels.com/photos/2325446/pexels-photo-2325446.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940'); background-position: center; background-repeat: no-repeat; background-size: cover; background-attachment: fixed;">
         <h1 class="text-light" >Let's Travel Together</h1>
         <p class="text-light" >Explore the world with us !</p>
       </div>
       <!-- Section > Day of the week -->
       <section >
-
+        <div class="container w-100 h-100 pt-5 mb-4">
+          <h1>Deal of the Week</h1>
+          <div class="row justify-content-between w-100">
+            <div class="col-3">
+              <div class="card">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/4/4b/La_Tour_Eiffel_vue_de_la_Tour_Saint-Jacques%2C_Paris_ao%C3%BBt_2014_%282%29.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div></div>
+            <div class="col-3">
+              <div class="card">
+              <img src="https://www.planetware.com/wpimages/2020/03/portugal-in-pictures-beautiful-places-to-photograph-lisbon.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div></div>
+            <div class="col-3">
+              <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-3">
+              <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          </div>
+        </div>
       </section>
 
       <!-- Section > Welcome Summer -->
       <section>
+        <!-- In this section you should have:
+      - 6 <img src="" alt="" srcset=""> per row when the screen is very large
+      -  border border-dark <img src="" alt="" srcset=""> per row when you are on a tablet (or a smaller window)
+      -  border border-dark <img src="" alt="" srcset=""> per row when you are on a small screen -->
 
+      <h1> Welcome Summer</h1>
+      <div class="row mt-5">
+        <div class="col-sm-6 col-md-6 col-lg-2 border border-dark"> <img src="/images/paris.avif" alt="" srcset="" class="img-fluid"></div>
+        <div class="col-sm-6 col-md-6 col-lg-2 border border-dark"></div>
+        <div class="col-sm-6 col-md-6 col-lg-2 border border-dark"></div>
+        <div class="col-sm-6 col-md-6 col-lg-2 border border-dark"></div>
+        <div class="col-sm-6 col-md-6 col-lg-2 border border-dark"></div>
+        <div class="col-sm-6 col-md-6 col-lg-2 border border-dark"></div>
+        <div class="col-sm-6 col-md-6 col-lg-2 border border-dark"> <img src="https://images.unsplash.com/photo-1598061437788-ebbfc3257ce1?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1932&q=80" alt="" srcset="" class="img-fluid"></div>
+        <div class="col-sm-6 col-md-6 col-lg-2 border border-dark"><img src="https://images.unsplash.com/photo-1619943379511-10dafc6e128c?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTV8fHRyYXZlbCUyMGRlc3RpbmF0aW9uc3xlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="" srcset="" class="img-fluid"></div>
+        <div class="col-sm-6 col-md-6 col-lg-2 border border-dark"><img src="https://images.unsplash.com/photo-1622460432957-949a1a166642?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTd8fHRyYXZlbCUyMGRlc3RpbmF0aW9uc3xlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="" srcset="" class="img-fluid"></div>
+        <div class="col-sm-6 col-md-6 col-lg-2 border border-dark"><img src="https://images.unsplash.com/photo-1601297616279-35a028506c93?ixid=MnwxMjA3fDB8MHxzZWFyY2h8OHx8c29tbWVyfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="" srcset="" class="img-fluid"></div>
+        <div class="col-sm-6 col-md-6 col-lg-2 border border-dark"><img src="https://images.unsplash.com/photo-1600763775060-27a9e38a10c7?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTN8fHNvbW1lcnxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="" srcset="" class="img-fluid"></div>
+      </div>
+    </div>
       </section>
 
       <!-- Section > Deal of the day -->
