Summer Section update

--- a/M2-D3.html
+++ b/M2-D3.html
@@ -55,18 +55,75 @@
       - 6 <img src="" alt="" srcset=""> per row when the screen is very large
       -  border border-dark <img src="" alt="" srcset=""> per row when you are on a tablet (or a smaller window)
       -  border border-dark <img src="" alt="" srcset=""> per row when you are on a small screen -->
+           <h1 class="text-center"> Welcome Summer</h1>
+      <div class="container d-flex justify-content-cente">
+      
+        <div class="row mt-5 ">
 
-      <div class="container">
-        <h1> Welcome Summer</h1>
-        <div class="row mt-5">
-          <div class="col-sm-6 col-md-6 col-lg-2 border border-dark"> <img src="/images/paris.avif" alt="" srcset="" class="img-fluid"></div>
-          <div class="col-sm-6 col-md-6 col-lg-2 border border-dark"> <img src="https://images.unsplash.com/photo-1598061437788-ebbfc3257ce1?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1932&q=80" alt="" srcset="" class="img-fluid"></div>
-          <div class="col-sm-6 col-md-6 col-lg-2 border border-dark"><img src="https://images.unsplash.com/photo-1619943379511-10dafc6e128c?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTV8fHRyYXZlbCUyMGRlc3RpbmF0aW9uc3xlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="" srcset="" class="img-fluid"></div>
-          <div class="col-sm-6 col-md-6 col-lg-2 border border-dark"><img src="https://images.unsplash.com/photo-1622460432957-949a1a166642?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTd8fHRyYXZlbCUyMGRlc3RpbmF0aW9uc3xlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="" srcset="" class="img-fluid"></div>
-          <div class="col-sm-6 col-md-6 col-lg-2 border border-dark"><img src="https://images.unsplash.com/photo-1601297616279-35a028506c93?ixid=MnwxMjA3fDB8MHxzZWFyY2h8OHx8c29tbWVyfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="" srcset="" class="img-fluid"></div>
-          <div class="col-sm-6 col-md-6 col-lg-2 border border-dark"><img src="https://images.unsplash.com/photo-1600763775060-27a9e38a10c7?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTN8fHNvbW1lcnxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="" srcset="" class="img-fluid"></div>
+          <div class="col-sm-6  col-md-4 col-xl-2 "> 
+            <div class="card">
+            <img src="/images/paris.avif" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">❤ Paris</h5>
+              <p class="card-text">The city of love and baguette. <br></p>
+              <a href="#" class="btn btn-dark">why not?</a>
+            </div>
+          </div> 
+         </div>
+          
+         <div class="col-sm-6 col-md-4 col-xl-2"> 
+          <div class="card">
+          <img src="https://images.unsplash.com/photo-1619025000734-0722968f4310?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTZ8fHZhY2F0aW9uJTIwZGVzdGluYXRpb258ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title"> 🌊A lonely Island</h5>
+            <p class="card-text">What would you take with you here?</p>
+            <a href="#" class="btn btn-dark">let´s go</a>
+          </div>
+        </div> 
+       </div>
+
+       <div class="col-sm-6 col-md-4  col-xl-2 "> 
+        <div class="card">
+        <img src="https://images.unsplash.com/photo-1543039625-14cbd3802e7d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1174&q=80" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">🛤 Lake Tahoe</h5>
+          <p class="card-text">Rest by the lake and chill.</p>
+          <a href="#" class="btn btn-dark">sure!</a>
         </div>
+      </div> 
+     </div>
+     <div class="col-sm-6 col-md-4  col-xl-2 "> 
+      <div class="card">
+      <img src="https://images.unsplash.com/photo-1464069668014-99e9cd4abf16?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTl8fG91dGRvb3J8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">🏝heavenly Earth</h5>
+        <p class="card-text">Where angels take a rest</p>
+        <a href="#" class="btn btn-dark">right away!</a>
       </div>
+    </div> 
+   </div>
+   <div class="col-sm-6 col-md-4  col-xl-2 "> 
+    <div class="card">
+    <img src="https://images.unsplash.com/photo-1416230789844-1998de481fdc?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1228&q=80" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title"> 🌄wonderland</h5>
+      <p class="card-text">Down the rabbithole to disconnect.</p>
+      <a href="#" class="btn btn-dark">Yeah!</a>
+    </div>
+  </div> 
+ </div>
+ <div class="col-sm-6 col-md-4  col-xl-2 "> 
+  <div class="card">
+  <img src="https://images.unsplash.com/photo-1541420937988-702d78cb9fa1?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1170&q=80" class="card-img-top" alt="...">
+  <div class="card-body"> 
+    <h5 class="card-title">🌅Muses Lair</h5>
+    <p class="card-text">Come here to get inspiration.</p>
+    <a href="#" class="btn btn-dark">I´m in!!</a>
+  </div>
+</div> 
+</div>
+            </div>
+    </div>
 
 
       <section>
